--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -118,8 +118,7 @@ button {
 .fr-hidden {
   display: none !important;
 }
-.froala-element img.fr-fil,
-img.fr-tag.fr-fil {
+img.fr-fil {
   z-index: 1;
   position: relative;
   vertical-align: top;
@@ -129,13 +128,11 @@ img.fr-tag.fr-fil {
   padding: 10px 10px 10px 3px;
   float: left !important;
 }
-.froala-element img.fr-fil.fr-tni,
-img.fr-tag.fr-fil.fr-tni {
+img.fr-fil.fr-tni {
   float: none !important;
   margin-left: 0 !important;
 }
-.froala-element img.fr-fir,
-img.fr-tag.fr-fir {
+img.fr-fir {
   z-index: 1;
   position: relative;
   vertical-align: top;
@@ -145,13 +142,11 @@ img.fr-tag.fr-fir {
   padding: 10px 3px 10px 10px;
   float: right !important;
 }
-.froala-element img.fr-fir.fr-tni,
-img.fr-tag.fr-fir.fr-tni {
+img.fr-fir.fr-tni {
   float: none !important;
   margin-right: 0 !important;
 }
-.froala-element img.fr-fin,
-img.fr-tag.fr-fin {
+img.fr-fin {
   z-index: 1;
   position: relative;
   vertical-align: top;
@@ -161,11 +156,9 @@ img.fr-tag.fr-fin {
   padding: 10px 0;
   float: none;
 }
-.froala-element a.fr-file,
 a.fr-file {
   position: relative;
 }
-.froala-element a.fr-file:before,
 a.fr-file:before {
   position: relative;
   display: inline-block;
@@ -180,6 +173,7 @@ a.fr-file:before {
   padding-right: 3px;
 }
 .froala-element table,
+.froala-view table,
 table.fr-tag {
   border-collapse: collapse;
   empty-cells: show;
@@ -191,17 +185,20 @@ table.fr-tag {
   box-sizing: border-box;
 }
 .froala-element table td,
+.froala-view table td,
 table.fr-tag td {
   border: solid 1px #cccccc;
   padding: 5px;
 }
 .froala-element table th,
+.froala-view table th,
 table.fr-tag th {
   background: #e6e6e6;
   border: solid 1px #cccccc;
   padding: 5px;
 }
 .froala-element pre,
+.froala-view pre,
 pre.fr-tag {
   white-space: pre-wrap;
   /* CSS3 */
@@ -224,6 +221,7 @@ pre.fr-tag {
   background-clip: padding-box;
 }
 .froala-element blockquote,
+.froala-view blockquote,
 blockquote.fr-tag {
   margin-left: 20px;
   margin-right: 0;
@@ -234,6 +232,7 @@ blockquote.fr-tag {
   border-left: solid 5px #cccccc;
 }
 .froala-element hr,
+.froala-view hr,
 hr.fr-tag {
   height: 0px;
   border: 0;
