Fix issues. Add urls plugin.

--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -1,6 +1,7 @@
 /*!
  * froala_editor v1.2.5 (http://editor.froala.com)
- * Copyright 2014-2014 Froala
+ * License http://editor.froala.com/license
+ * Copyright 2014 Froala Labs
  */
 .royal-theme.froala-box .html-switch {
   border-color: #aaaaaa;
