--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -1,7 +1,7 @@
 /*!
  * froala_editor v1.2.5 (http://editor.froala.com)
  * License http://editor.froala.com/license
- * Copyright 2014 Froala Labs
+ * Copyright 2014-2015 Froala Labs
  */
 .royal-theme.froala-box .html-switch {
   border-color: #aaaaaa;
