Fix HTML view padding for inlineMode.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -523,7 +523,7 @@ hr.fr-tag {
   content: "";
 }
 .f-html .froala-element.f-inline textarea {
-  padding: 0 0 0 10px;
+  padding: 10px 0 0 10px;
 }
 .f-html .froala-element textarea {
   direction: ltr !important;
