--- a/css/froala_content.css
+++ b/css/froala_content.css
@@ -6,40 +6,45 @@
 img.fr-fil {
   z-index: 1;
   position: relative;
-  vertical-align: top;
-  display: block;
   margin: auto;
   overflow: auto;
   padding: 10px 10px 10px 3px;
   float: left !important;
 }
-img.fr-fil.fr-tni {
+img.fr-fil.fr-dib {
   float: none !important;
   margin-left: 0 !important;
 }
 img.fr-fir {
   z-index: 1;
   position: relative;
-  vertical-align: top;
-  display: block;
   margin: auto;
   overflow: auto;
   padding: 10px 3px 10px 10px;
   float: right !important;
 }
-img.fr-fir.fr-tni {
+img.fr-fir.fr-dib {
   float: none !important;
   margin-right: 0 !important;
 }
 img.fr-fin {
   z-index: 1;
   position: relative;
-  vertical-align: top;
-  display: block;
   margin: auto;
   overflow: auto;
-  padding: 10px 0;
   float: none;
+}
+img.fr-fin.fr-dib {
+  padding: 10px 0;
+}
+img.fr-dib {
+  vertical-align: top;
+  display: block;
+}
+img.fr-dib:after {
+  clear: both;
+  display: block;
+  content: "";
 }
 a.fr-file {
   position: relative;
