--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -255,6 +255,18 @@ hr.fr-tag {
   float: right;
   margin: 10px 1px 10px 10px;
 }
+.fr-tnv {
+  float: none !important;
+  margin: auto;
+  text-align: center;
+  display: block !important;
+}
+.fr-tnv.fr-fvl {
+  text-align: left;
+}
+.fr-tnv.fr-fvr {
+  text-align: right;
+}
 .froala-element {
   min-height: 35px;
   overflow-y: auto;
