--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -3,8 +3,19 @@
  * License http://editor.froala.com/license
  * Copyright 2014-2015 Froala Labs
  */
+.royal-theme.froala-box.fr-disabled .froala-element {
+  color: #999999;
+}
+.royal-theme.froala-box.fr-disabled button.fr-bttn,
+.royal-theme.froala-box.fr-disabled button.fr-trigger {
+  color: #999999 !important;
+}
+.royal-theme.froala-box.fr-disabled button.fr-bttn:after,
+.royal-theme.froala-box.fr-disabled button.fr-trigger:after {
+  border-top-color: #999999 !important;
+}
 .royal-theme.froala-box .html-switch {
-  border-color: #aaaaaa;
+  border-color: #999999;
 }
 .royal-theme.froala-box .froala-wrapper.f-basic {
   border: solid 1px #553982;
@@ -116,11 +127,11 @@
 }
 .royal-theme.froala-editor button.fr-bttn:disabled,
 .royal-theme.froala-editor button.fr-trigger:disabled {
-  color: #aaaaaa !important;
+  color: #999999 !important;
 }
 .royal-theme.froala-editor button.fr-bttn:disabled:after,
 .royal-theme.froala-editor button.fr-trigger:disabled:after {
-  border-top-color: #aaaaaa !important;
+  border-top-color: #999999 !important;
 }
 .royal-theme.froala-editor.ie8 button.fr-bttn:hover,
 .royal-theme.froala-editor.ie8 button.fr-trigger:hover {
@@ -272,7 +283,7 @@
 }
 .royal-theme.froala-editor .froala-popup div.f-popup-line input[type="text"]:disabled {
   background: #ffffff;
-  color: #aaaaaa;
+  color: #999999;
 }
 .royal-theme.froala-editor .froala-popup div.f-popup-line textarea {
   border: solid 1px #cccccc;
