Disable should now allow scrolling.

--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -59,6 +59,9 @@ button {
   left: 7px;
   right: auto;
 }
+.froala-box.fr-disabled .froala-wrapper {
+  overflow: hidden;
+}
 .froala-box.fr-disabled .froala-element {
   color: #999999;
 }
