--- a/css/themes/royal.css
+++ b/css/themes/royal.css
@@ -1,6 +1,6 @@
 /*!
- * froala_editor v1.2.7 (http://editor.froala.com)
- * License http://editor.froala.com/license
+ * froala_editor v1.2.7 (https://www.froala.com/wysiwyg-editor)
+ * License https://www.froala.com/wysiwyg-editor/terms
  * Copyright 2014-2015 Froala Labs
  */
 .royal-theme.froala-box.fr-disabled .froala-element {
