--- a/css/froala_editor.css
+++ b/css/froala_editor.css
@@ -114,13 +114,13 @@ button {
   right: 0;
   z-index: 3000;
 }
-.froala-box.fr-fullscreen .froala-editor {
+.froala-box.fr-fullscreen .froala-editor:not(.f-inline) {
   width: 100% !important;
   position: relative !important;
   left: 0 !important;
   right: 0 !important;
 }
-.froala-box.fr-fullscreen .froala-editor:not(.f-scroll) {
+.froala-box.fr-fullscreen .froala-editor:not(.f-inline):not(.f-scroll) {
   top: 0 !important;
   border-bottom: 0 !important;
 }
